style/main.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
.container {
    display: grid;
    grid-template-columns: 1920px;
    grid-template-rows: 50px 100px 120px;
}
.container .top-nav {
    background-color: #1A1C27;
}
.container .navigation {
    background: #FFFFFF;
    font-family: 'Lato';
}
.navigation .logo-and-image {
    position: absolute;
    left: 375px;
    top: 78px;
}
.navigation .thefox {
    color: #2C3E50;
    position: relative;
    left: 11px;
    bottom: 8px;
    font-size: 35.69px;
    line-height: 13.77px;
}
.navigation .thefox .the {
    font-weight: 400;
}
.navigation .thefox .fox {
    font-weight: 900;
}
.navigation .menu {
    position: absolute;
    top: 93px;
    left: 618px;
    font-weight: 400;
    font-size: 15.86px;
    line-height: 13.77px;
}
.navigation .menu a:first-child {
    position: relative;
    left: 0;
}
.navigation .menu a {
    text-decoration: none;
    color: #A1B1BC;
    position: relative;
}
.navigation .menu .page {
    left: 45px;
    
}
.navigation .menu .portfolio {
    left: 88px;
}
.navigation .menu .blog {
    left: 131px;
}
.navigation .menu .shop {
    left: 174px;
}
.navigation .menu .travel {
    left: 216px;
}
.navigation .menu .shortcodes {
    left: 259.1px;
}
.navigation .menu .features {
    left: 305px;
}
.navigation .menu .contact {
    left: 352px;
}
.navigation .menu a:hover {
    color: #1ABC9C;
    padding-top: 35px;
    border-top: 5px solid #1ABC9C;
}
.navigation .icons {
    color: #A1B1BC;
    font-size: 28px;
    position: absolute;
    top: 80px;
    left: 1466px;
}
.navigation .icons .fa-shopping-basket {
    position: relative;
    left: 48px;
    bottom: 34px;
}
.container .top-nav {
    font-family: 'Lato';
    color: #A1B1BC;
    line-height: 19px;
    border-top: 1px solid #707070;
    border-bottom: 1px solid #707070;
}
.top-nav .language, .top-nav .email, .top-nav .call-us {
    border-right:1px solid #707070;
    border-left: 1px solid #707070;
    padding: 17px 20px 13px;
}
.three {
    position: absolute;
    top: 18px;
    left: 372px;
}
.languages, .english {
    position: relative;
    left: 50px;
    letter-spacing: -0.99px;
    left: 10px;
    bottom: 1px;
}
.top-nav .three .call-us .fa {
    position: relative;
    left: -1px;
    bottom: 1px;
}
.top-nav .three .call-us span {
    position: relative;
    left: 5px;
    bottom: 1px;
    letter-spacing: -0.82px;
}
.top-nav .three .email {
    padding-left: 16px;
}
.top-nav .three .email .fa {
    position: relative;
    left: -6px;
    bottom: 1px;
}
.top-nav .three .email span {
    position: relative;
    left: 5px;
    bottom: 1px;
    letter-spacing: -0.95px;
}
.top-nav .fa {
    font-size: 18px;
    color: #1ABC9C;
}
.top-nav .english {
    color: #FFFFFF;
    font-weight: 900;
}
.container .bot-nav {
    background: #222533;
    font-family: 'Lato';
    font-weight: 400;
    line-height: 19px;
}
.bot-nav .classic {
    font-size: 30px;
    color: #ECF0F1;
    position: relative;
    left: 372px;
    top: 48px;
}
.bot-nav button .fa {
    color: #A1B1BC;
    font-weight: 700;
}
.bot-nav button {
    width: 30px;
    height: 30px;
    border-radius: 5px;
    background: #FFFFFF;
    border: 1px solid #A1B1BC;
    position: relative;
    left: 389px;
    top: 44px;
}
.bot-nav .small-nav {
    position: relative;
    left: 1139px;
    top: 45px;
}
.bot-nav .small-blog {
    position: relative;
    left: 21px;
}
.bot-nav .small-classic {
    position: relative;
    left: 41px;
    bottom: 1px;
}
.bot-nav .small-nav .fa {
    color: #FFFFFF;
    font-size: 16px;
    font-weight: 400;
}
.bot-nav .small-nav .fa.right-1 {
    position: relative;
    left: 13px;
}
.bot-nav .small-nav .fa.right-2 {
    position: relative;
    left: 33px;
}
.bot-nav .small-nav span {
    color: #ECF0F1;
    font-weight: 400;
    font-size: 14px;
}
.container .middle {
    font-family: 'Lato';
}
.container .content {
    position: relative;
    left: 696px;
    top: 99px;
    width: 849px;
    height: 3015px;
}
.content .poster {
    height: 400px;
    width: 100%;
    background: #CCCCCC;
}
.top-section .header {
    font-weight: 700;
    color: #2C3E50;
    font-size: 30px;
    line-height: 30px;
    position: relative;
    top: 27px;
}
.description {
    font-size: 14px;
    font-weight: 400;
    color: #A1B1BC;
    line-height: 30px;
    position: relative;
    top: 34px;
}
.stp {
    left: 4px;
    position: relative;
}
.likesCount {
    left: 3px;
    position: relative;
}
.timePosted {
    left: 2px;
    position: relative;
}
.commentsCount {
    left: 1px;
    position: relative;
}
.author {
    left: -1px;
    position: relative;
}
.c {
    position: relative;
    color: #EBEBEB;
}
.component-1 {
    left: 1px;
}
.component-2 {
    left: 3px;
}
.component-3 {
    left: 3px;
}
.component-4 {
    left: 5px;
}
.component-5 {
    left: 7px;
}
.top-section .article .meta {
    font-size: 14px;
    line-height: 24px;
    color: #A1B1BC;
    position: relative;
    top: 62px;
    right: 1px;
}
.top-section .article button {
    position: relative;
    top: 87px;
    letter-spacing: 0.1px;
    font-weight: 900;
    font-size: 16px;
    line-height: 24px;
    color: #2C3E50;
    background: #FFFFFF;
    padding: 12px 21.5px 12px 18px;
    border: 1px solid #2C3E50;
    border-radius: 3px;
}
.top-section .article button:hover, .middle-section .readmore:hover, .second-bottom-section .readmore:hover, .bottom-section .readmore:hover {
    color: #FFFFFF;
    background: #2C3E50;
   
}
.content .poster-2 {
    position: relative;
    top: 157px;
}
.content .poster-2 button {
    position: relative;
    top: 175px;
    z-index: 99;
    width: 47px;
    height: 50px;
    background: #FFFFFF;
    font-size: 18px;
    line-height: 50px;
    color: #2C3E50;
    border: 1px solid #FFFFFF;
    border-radius: 3px;
}
.poster-2 .right-arrow {
    left: 752px;
}
.four-horsemen {
    position: relative;
    top: 310px;
    left: 374px;
}
.horse {
    position: relative;
}
/* ... */

